2021-03-07  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* various man files: Require Tcl 8.6 and TclOO

2021-01-31  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* combinatoricsExt.tcl: Extension of the collection of combinatorial procedures
	* combinatoricsExt.test: Tests for the new procedures
	* combinatorics.man: Description of the new procedures
	* pkgIndex.tcl: Added the package math::combinatorics

2021-01-03  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* changepoint.tcl: New package defining two change point detection algorithms
	* changepoint.test: Basic tests for the change point detection algorithms
	* changepoint.man: Description of the change point detection procedures
	* pkgIndex.tcl: Added the changepoint package

2021-01-01  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* probopt.tcl: New package defining a number of probabilistic optimisation algorithms
	* probopt_*.tcl: Individual source files for these algorithms
	* probopt.test: Tests for the probabilistic algorithms
	* probopt.man: Description of the algorithms (including references describing the backgrounds)
	* filtergen.tcl: Correct a small mistake (loop over data)
	* filtergen.test: Correct tests (several small mistakes)

2020-12-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* filtergen.tcl: New package for digital filtering
	* filtergen.man: Description of the filters package
	* filtergen.test: Simple tests for the filters package
	* pkgIndex.tcl: Added the filters package

2020-11-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* geometry.tcl: Source the file geometry_ext.tcl - additional procedures by Manfred Rosenberger
	* geometry_ext.tcl: File with the additional procedures
	* geometry.test: Added tests for these procedures
	* math_geometry.man: Description of these procedures
	* pkgIndex.tcl: Bumped version to 1.4.1

2020-09-20  Arjen Markus <arjenmarkus@users.sourceforge.net>