@@ -37,6 +37,14 @@ test decimal-plus-1.1 "Sum of two numbers" {
 	     [math::decimal::fromstr 1.00]]
 } 2.00
 
+#
+# Ticket d159e101f329682a232aabac36c0ef6640ff8484:
+# math::decimal::fromstr reports an error when the exponential part has leading zeros.
+test decimal-fromstr-1.1 "Correct conversion" {
+    list [math::decimal::tostr [math::decimal::fromstr 1E-09]] \
+         [math::decimal::tostr [math::decimal::fromstr 1E-009]]
+} {1E-9 1E-9}
+
 # -------------------------------------------------------------------------
 
 # End of test cases
